Finish Login and Register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,12 +27,20 @@
     <string name="submit">Submit</string>
     <string name="default_web_client_id">892989105581-8mugpktlflf0f4uv5qc6d5rokndq3vpp.apps.googleusercontent.com</string>
 
+    <string name="user_role">User Role</string>
     <string-array name="feedback_types">
         <item>General Feedback</item>
         <item>Bug Report</item>
         <item>Feature Request</item>
         <item>Suggestion</item>
         <item>Other</item>
+    </string-array>
+
+    <string-array name="user_role_options">
+        <item>Please Select Your Role</item>
+        <item>Student</item>
+        <item>Educator</item>
+        <item>Employer</item>
     </string-array>
 
 </resources>
