--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,19 @@
         <item>Suggestion</item>
         <item>Other</item>
     </string-array>
+    <string-array name="lecturer_skills_array">
+        <item>Risk Management</item>
+        <item>Adaptability</item>
+        <item>Team Leadership</item>
+        <item>Industry Knowledge</item>
+        <item>Project Management</item>
+    </string-array>
+    <string-array name="student_skills_array">
+        <item>UI/UX Design</item>
+        <item>Backend</item>
+        <item>Creativity</item>
+        <item>Code Simplicity</item>
+        <item>Problem-Solving</item>
+    </string-array>
 
 </resources>
