--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,9 +30,9 @@
     <string name="user_role">User Role</string>
     <string-array name="feedback_types">
         <item>General Feedback</item>
-        <item>Bug Report</item>
-        <item>Feature Request</item>
-        <item>Suggestion</item>
+        <item>Complaint</item>
+        <item>Course Idea</item>
+        <item>Course Suggestion</item>
         <item>Other</item>
     </string-array>
     <string-array name="lecturer_skills_array">
